Revert "[PRE-PUSH]: Code cleaned by Gradle Spotless plugin"
This reverts commit 4d89a5b60d2911bc59a16e45539ac6933b58d8e8.